<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/rounded"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:contentDescription="@string/todo_photo_movie"
            android:scaleType="fitXY"
            android:src="@drawable/pikachu" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/img_photo"
            android:layout_toRightOf="@id/img_photo"
            android:text="@string/name_heroes"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/img_photo"
            android:layout_toRightOf="@id/img_photo"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/lorem" />

        <TextView
            android:id="@+id/txt_genre1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="75dp"
            android:layout_toEndOf="@id/img_photo"
            android:layout_toRightOf="@id/img_photo"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/genre" />

        <TextView
            android:id="@+id/txt_genre"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="99dp"
            android:layout_toEndOf="@id/txt_genre1"
            android:layout_toRightOf="@id/txt_genre1"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/action"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_tahun2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_name"
            android:layout_marginStart="26dp"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="111dp"
            android:layout_toEndOf="@id/img_photo"
            android:layout_toRightOf="@id/img_photo"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/tahun" />

        <TextView
            android:id="@+id/txt_tahun"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="09dp"
            android:layout_marginLeft="09dp"
            android:layout_marginTop="134dp"
            android:layout_toEndOf="@id/txt_tahun2"
            android:layout_toRightOf="@id/txt_tahun2"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/tahun_2"
            android:textStyle="bold" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
