<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MoveWithObjectActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MoveWithObjectActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@drawable/rounded"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/img_photo"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/todo_photo"
                        android:scaleType="fitXY"
                        android:src="@drawable/pikachu" />

                    <TextView
                        android:id="@+id/txt_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="26dp"
                        android:layout_toEndOf="@id/img_photo"
                        android:text="@string/name_heroes"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txt_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_name"
                        android:layout_marginStart="23dp"
                        android:layout_marginTop="14dp"
                        android:layout_toEndOf="@id/img_photo"
                        android:ellipsize="end"
                        android:maxLines="8"
                        android:text="@string/lorem" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:background="@drawable/rounded"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:text="@string/tahun"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/tv_item_tahun"
                                    android:textStyle="bold"
                                    tools:text="Tahun Pembuatan" />
                            </TableRow>

                            <TableRow
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="16dp"
                                    android:text="@string/genre"
                                    android:textSize="14sp" />

                                <TextView
                                    android:id="@+id/tv_genre"
                                    android:textStyle="bold"
                                    tools:text="Genre-ku" />
                            </TableRow>

                        </TableLayout>

                        <TextView
                            android:id="@+id/tv_item_sinopsis"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="20dp"
                            android:layout_marginTop="30dp"
                            android:gravity="center_vertical|left|right"
                            tools:ignore="RtlHardcoded"
                            tools:text="Deskripsi" />

                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>